--- a/index.htm
+++ b/index.htm
@@ -26,32 +26,50 @@
       <section>
         <article id="about">
           <figure>
-            <img src="./images/png/photoCv.png" title="photo" alt="photo">
+            <img src="./images/jpg/photoCvIa.jpg" title="photo" alt="photo">
           </figure>
           <h1>Adrien Houédé</h1>
           <h2>Game designer & developer full stack</h2>
           <p>
             From a very young age, I have always evolved in an IT environment, 
-            whether with my father who is a developer or with my older brother who played 
-            on different consoles in front of me. So I naturally developed a passion for 
-            video games, starting on gameboy and DS, passing through consoles to finally arrive on pc.
-          </p>
-          <p>
-            But beyond just playing, I tried to understand how a video game works, 
-            so I discovered game design and all the professions that revolve around it. 
-            Subsequently, I ended up coding my first video game in 2020, then others 
-            followed in parallel with my studies in a BUT MMI in Vélizy.
-          </p>
-          <p>
-            With this diploma, I will be a full-stack web developer and I will have basics 
-            in game design that I intend to deepen with the help of a master's degree. 
-            At the end of 2022, I have currently developed 4 video games mainly for the web, 
-            games that you will now be able to discover.
+            whether with my father who is a developer or with my older brother who work in network. So I naturally developed a interest for 
+            coding, starting with games then developpement web and more recently a backend specialization.
           </p>
           <a href="https://www.linkedin.com/in/adrien-houede-1aa482234/" target="_blank">
             <img src="./images/png/linkedin.png" title="Linkedin" alt="Linkedin" id="linkedin">
           </a>
         </article>
+        <article id="ministere_quebec">
+          <figure>
+            <a href="https://www.quebec.ca/gouvernement/ministere/cybersecurite-numerique" target="_blank">
+              <img src="./images/jpg/ministere_quebec.jpg" title="Ministère de l'informatique à Québec" alt="Ministère de l'informatique à Québec">
+            </a>
+          </figure>
+          <h1>Ministry of Cybersecurity and Cloud Computing</h1>
+          <div class="etiquette"><span class="back">Backend</span><span class="infonuagique">Infonuagique</span></div>
+          <p>
+            3-month internship at the Ministry of Cybersecurity and Cloud Computing, 
+            in Quebec City during my co-graduation at the University of Quebec at Chcicoutimi in a computer science baccelor.
+          </p>
+        </article>
+        <article id="celuga">
+          <figure>
+            <a href="https://www.celuga.fr" target="_blank">
+              <img src="./images/png/logo_celuga.png" title="Logo Celuga" alt="Logo Celuga">
+            </a>
+          </figure>
+          <h1>Celuga</h1>
+          <div class="etiquette"><span class="back">Backend</span><span class="front">Frontend</span></div>
+          <p>
+            I did an internship as a fullstack developer for 3 months at Celuga. 
+            I had the opportunity to learn the Bootstrap framework on the front end and the .Net framework in C# on the back end.
+          </p>
+          <p>
+            I had the opportunity to independently develop the back office of a site which allowed us to reward our client's employees. 
+            I had to develop my database, create the tool interface, but also develop the system for drawing lots and notifying the various stakeholders.
+          </p>
+        </article>
+
         <article id="jumper">
           <figure>
             <a href="http://adrien.houede.mmi-velizy.fr/html/Ultimate%20%20Jumper/" target="_blank">
@@ -59,7 +77,7 @@
             </a>
           </figure>
           <h1>Ultimate Jumper</h1>
-          <div class="etiquette"><span class="code">Code</span><span class="levelDesign">Level Design</span></div>
+          <div class="etiquette"><span class="front">Frontend</span></div>
           <p>
             <b>If you want to play I invite you to click on the image.</b>
           </p>
@@ -85,7 +103,7 @@
             </a>
           </figure>
           <h1>Sweet Demolition</h1>
-          <div class="etiquette"><span class="code">Code</span></div>
+          <div class="etiquette"><span class="front">Frontend</span></div>
           <p>
             <b>If you want to play I invite you to click on the image.</b>
             The game is on the website Replit, you just have to create a account and run the code.
@@ -117,7 +135,7 @@
             </a>
           </figure>
           <h1>Web documentary on concerts in virtual reality</h1>
-          <div class="etiquette"><span class="code">Code</span><span class="writing">Writing</span><span class="interview">Interview</span></div>
+          <div class="etiquette"><span class="front">Frontend</span><span class="writing">Writing</span></div>
           <p>
             <b>If you want to read it I invite you to click on the image, 
               and let yourself be carried away in the universe of virtual reality</b>
@@ -143,7 +161,9 @@
     <footer>
       <nav>
         <ul>
-          <li><a href="#about"><img src="./images/png/photoCv.png" title="Adrien" alt="Adrien" id="img_me"></a></li>
+          <li><a href="#about"><img src="./images/jpg/photoCvIa.jpg" title="Adrien" alt="Adrien" id="img_me"></a></li>
+          <li><a href="#ministere_quebec"><img src="./images/jpg/ministere_quebec.jpg" title="Ministère de l'informatique à Québec" alt="Ministère de l'informatique à Québec" id="img_mq"></a></li>
+          <li><a href="#celuga"><img src="./images/png/logo_celuga.png" title="Logo Celuga" alt="Logo Celuga" id="img_cel"></a></li>
           <li><a href="#jumper"><img src="./images/png/icon_ultimate.png" title="Ultimate Jumper" alt="Ultimate Jumper" id="img_uj"></a></li>
           <li><a href="#sweet"><img src="./images/png/pion_bleu.png" title="Sweet Demolition" alt="Sweet Demolition" id="img_sd"></a></li>
           <li><a href="#webdoc_vr"><img src="./images/jpg/concert_jeanMichelJar_vincentMasson.jpg" title="Concert Welcome To The Other Side" alt="Concert Welcome To The Other Side" id="img_sd"></a></li>
